# strata-p2p

./: .gitignore  .justfile  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  buf.yaml  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml
.github/actions/extract-rust-version/: action.yml
.github/workflows/: cron-nightly-rust.yml  cron-zizmor.yml  dependencies.yml  docs.yml  feature-matrix.yml  lint-actions.yml  lint.yml  security.yml  unit.yml  zizmor.yml
crates/db/: Cargo.toml
crates/db/src/: lib.rs  operator.rs  pk_serde.rs  prost_serde.rs  sled.rs  states.rs
crates/p2p/: Cargo.toml  build.rs
crates/p2p/proto/strata/bitvm2/p2p/v1/: getmessage.proto  gossipsub.proto
crates/p2p/src/: commands.rs  events.rs  lib.rs  message.rs  operator_pubkey.rs  score_manager.rs  signer.rs  timeouts.rs  validator.rs
crates/p2p/src/db/: mod.rs  sled.rs
crates/p2p/src/swarm/: behavior.rs  codec.rs  codec_raw.rs  dht_record.rs  dial_manager.rs  errors.rs  filtering.rs  handle.rs  hasher.rs  kad_republish.rs  message.rs  message_dht.rs  mod.rs  signed_data.rs
crates/p2p/src/swarm/dto/: dht_record.rs  gossipsub.rs  message.rs  mod.rs  request_response.rs  setup.rs  signed.rs  signed_data.rs
crates/p2p/src/swarm/message/: dht_record.rs  gossipsub.rs  mod.rs  pubkey_serialization.rs  request_response.rs  serde.rs  setup.rs  signature_serialization.rs  signed.rs
crates/p2p/src/swarm/serializing/: mod.rs
crates/p2p/src/swarm/setup/: behavior.rs  events.rs  flexbuffers_codec.rs  handler.rs  mod.rs  upgrade.rs
crates/p2p/src/tests/: common.rs  conn_limits.rs  connect_peer.rs  db.rs  dht_date_validation.rs  dht_record.rs  dht_request_response.rs  dns.rs  find_multiaddr.rs  flexbuffers.rs  flexbuffers_serialization.rs  future_time.rs  getclosestpeers.rs  gossipsub.rs  is_connected.rs  kad_invalid_record.rs  kad_replay_attack.rs  mem_abs_conn_limits.rs  mem_rel_conn_limits.rs  message_size.rs  mod.rs  new_op.rs  new_op_dht.rs  new_user.rs  protocol_support_minimal.rs  quic.rs  reqresp_key_mismatch.rs  reqresp_replay_attack.rs  request.rs  request_response.rs  setup.rs  setup_invalid_signature.rs  setup_memory_cleanup.rs  setup_replay_attack.rs  three_handlers.rs  transport_allowlist.rs  validator_integration.rs
crates/p2p/src/wire/: mod.rs
crates/p2p/src/wire/p2p/: v1.rs
crates/p2p/tests/: common.rs  gossipsub.rs
crates/types/: Cargo.toml
crates/types/src/: deposit_data.rs  lib.rs  operator.rs  scope.rs  session_id.rs  sessionid.rs  stake_chain_data.rs  stake_chain_id.rs  stake_data.rs  wots.rs
crates/wire/: Cargo.toml  build.rs
crates/wire/src/: lib.rs
crates/wire/src/p2p/: mod.rs  v1.rs
crates/wire/src/p2p/v1/: typed.rs
proto/strata/bitvm2/p2p/v1/: getmessage.proto  gossipsub.proto
