[workspace]
members = ["crates/p2p"]

default-members = ["crates/p2p"]

resolver = "3"

package.edition = "2024"
package.version = "0.1.0"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "deny"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rust.missing_docs = "deny"
rust.unsafe_op_in_unsafe_fn = "deny"
rustdoc.all = "deny"
clippy.missing_const_for_fn = "deny"
clippy.too_long_first_doc_paragraph = "warn"

[workspace.dependencies]
asynchronous-codec = { version = "0.7.0", features = ["json"] }
futures = "0.3.31"
libp2p = { version = "0.55.0", features = [
  "noise",
  "gossipsub",
  "tcp",
  "request-response",
  "tokio",
  "macros",
  "ping",
  "yamux",
  "identify",
  "serde",
  "quic",
] }
thiserror = "2.0.11"
tokio = { version = "1.42.0", default-features = false, features = [
  "macros",
  "time",
] }
tokio-util = { version = "0.7.13", default-features = false, features = ["rt"] }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
dashmap = "6.1.0"
crossbeam-deque = "0.8.5"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3
