[package]
name = "strata-p2p-db"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
bitcoin.workspace = true
musig2.workspace = true
prost.workspace = true
serde.workspace = true
snafu.workspace = true
strata-p2p-types.path = "./../types"
tracing.workspace = true

# make this implementation optional
sled = "0.34.7"
# temporaty solution for DB serialization. `ciborium` crate is not working, unfortunatly.
serde_json = "1.0.135"
threadpool.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt"] }
rand = "0.8.5"
secp256k1 = { version = "0.29.0", features = ["rand"] }
