[package]
name = "strata-p2p-db"
version = "0.1.0"
edition = "2021"

[lints]
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }

[dependencies]
async-trait.workspace = true
bitcoin.workspace = true
musig2.workspace = true
prost.workspace = true
serde.workspace = true
strata-p2p-types.path = "./../types"
thiserror.workspace = true
tracing.workspace = true

# make this implementation optional
sled = "0.34.7"
# temporaty solution for DB serialization. `ciborium` crate is not working, unfortunatly.
serde_json = "1.0.135"
threadpool.workspace = true
tokio = { workspace = true, features = ["sync"] }

libp2p-identity = { workspace = true, features = ["serde"] }

[dev-dependencies]
secp256k1 = { workspace = true, features = ["rand"] }
tokio = { workspace = true, features = ["rt"] }
rand = "0.8.5"
