[package]
name = "strata-p2p"
version.workspace = true
edition.workspace = true

[features]
default = ["kad", "byos", "quic", "request-response", "gossipsub"]
kad = ["libp2p/kad"]
byos = ["dep:asynchronous-codec", "serde_json", "serde"]
gossipsub = ["libp2p/gossipsub", "serde_json", "serde"]
quic = ["libp2p/quic"]
request-response = ["libp2p/request-response", "serde_json", "serde"]

[lints]
workspace = true

[dependencies]
asynchronous-codec = { workspace = true, optional = true }
cynosure.workspace = true
futures.workspace = true
libp2p = { workspace = true, features = [
  "noise",
  "tcp",
  "tokio",
  "ed25519",
  "macros",
  "yamux",
  "identify",
  "serde",
] }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "time"] }
tokio-util.workspace = true
tracing.workspace = true


[dev-dependencies]
anyhow = "1.0.95"
rand = "0.9.1"
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
tokio-util.workspace = true
tracing-subscriber.workspace = true
