[package]
name = "strata-p2p"
version.workspace = true
edition.workspace = true

[features]
default = ["quic", "request-response", "gossipsub", "mem-conn-limits-abs", "mem-conn-limits-rel"]
kad = ["libp2p/kad"]
byos = ["dep:asynchronous-codec", "flexbuffers", "serde", "bytes"]
gossipsub = ["libp2p/gossipsub", "flexbuffers", "serde"]
quic = ["libp2p/quic"]
request-response = ["libp2p/request-response", "flexbuffers", "serde"]
mem-conn-limits-abs = ['libp2p/memory-connection-limits']
mem-conn-limits-rel = ['libp2p/memory-connection-limits']

[lints]
workspace = true

[dependencies]
asynchronous-codec = { workspace = true, optional = true }
cynosure.workspace = true
flexbuffers = { workspace = true, optional = true }
futures.workspace = true
libp2p = { workspace = true, features = [
  "noise",
  "tcp",
  "tokio",
  "ed25519",
  "macros",
  "yamux",
  "identify",
  "serde",
] }
serde = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "time"] }
tokio-util.workspace = true
tracing.workspace = true
bytes = {workspace = true, optional = true}


[dev-dependencies]
anyhow = "1.0.95"
rand = "0.9.1"
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
tokio-util.workspace = true
tracing-subscriber.workspace = true
