[package]
name = "strata-p2p"
version.workspace = true
edition.workspace = true

[features]
default = [
  "quic",
  "request-response",
  "gossipsub",
  "mem-conn-limits-abs",
  "mem-conn-limits-rel",
  "kad",
  "byos",
]
kad = ["libp2p/kad", "dep:flexbuffers", "dep:serde"]
byos = ["dep:asynchronous-codec", "dep:flexbuffers", "dep:serde", "dep:bytes"]
gossipsub = ["libp2p/gossipsub", "dep:flexbuffers", "dep:serde"]
quic = ["libp2p/quic"]
request-response = ["libp2p/request-response", "dep:flexbuffers", "dep:serde"]
mem-conn-limits-abs = ['libp2p/memory-connection-limits']
mem-conn-limits-rel = ['libp2p/memory-connection-limits']

[lints]
workspace = true

[dependencies]
asynchronous-codec = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
cynosure.workspace = true
flexbuffers = { workspace = true, optional = true }
futures.workspace = true
libp2p = { workspace = true, features = [
  "noise",
  "tcp",
  "tokio",
  "ed25519",
  "macros",
  "yamux",
  "identify",
  "serde",
] }
serde = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "time"] }
tokio-util.workspace = true
tracing.workspace = true


[dev-dependencies]
anyhow = "1.0.95"
rand = "0.9.1"
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
tokio-stream.workspace = true
tokio-util.workspace = true
racing-subscriber.workspace = true
