[package]
name = "strata-p2p-types"
version = "0.2.0"
edition = "2024"

[features]
default = []

[lints]
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }

[dependencies]
hex = { workspace = true, features = ["serde"] }
libp2p-identity.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json = "1.0.138"
