[package]
name = "strata-p2p-types"
version = "0.1.0"
edition = "2021"

[features]
default = []

[lints]
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }

[dependencies]
bitcoin.workspace = true
hex = { workspace = true, features = ["serde"] }
libp2p-identity.workspace = true
serde.workspace = true

[dev-dependencies]
# bincode = "1.3.3"
secp256k1 = { workspace = true, features = ["rand"] }
serde_json = "1.0.138"
