[package]
name = "strata-p2p-wire"
version = "0.1.0"
edition = "2021"

[lints]
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }

[dependencies]
bitcoin.workspace = true
musig2.workspace = true
prost.workspace = true
strata-p2p-types.path = "../types"

[build-dependencies]
prost-build = "0.13.4"
